--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-spring.application.name=microservicios
-spring.datasource.url=jdbc:h2:mem:twitterclone
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-## Database Configuration
-#spring.datasource.url=jdbc:mysql://54.227.72.178:3306/properties_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
-## JPA/Hibernate Configuration
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.application.name=microservicios
+#spring.datasource.url=jdbc:h2:mem:twitterclone
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://3.88.201.246:3306/properties_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
