--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=microservicios
+server.address=0.0.0.0
+server.port=8080
 spring.datasource.url=jdbc:h2:mem:twitterclone
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
